--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-rgdfh
+Futebol é muito simples: quem tem a bola ataca. Quem não tem defende. Se todas as batalhas dos homens se dessem apenas nos campos de futebol, quão belas seriam as guerras. Misturo poesia com cachaça e acabo discutindo futebol.
+Se todas as batalhas dos homens se dessem apenas nos campos de futebol, quão belas seriam as guerra
+ amor é como o futebol, uma caixinha de surpresas. Um dia você só quer ser amigo de uma pessoa, outro dia você percebe que está apaixonado.
+Quem não sonhou em ser um jogador de futebol?ol, o gol não é apenas uma bola balançando a rede. É uma rede embalando uma paixão!
+Quem não sonhou em ser um jogador de futebol?
+ruas  Espírito Santo
+casa 162
